ADD_LIBRARY(HistDumper SHARED)
TARGET_SOURCES(HistDumper PRIVATE
    HistDumper/HistDumper.cpp
)
TARGET_INCLUDE_DIRECTORIES(HistDumper PUBLIC ${ROOT_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(HistDumper ${ROOT_LIBRARIES})

ADD_EXECUTABLE(dump_histos)
TARGET_SOURCES(dump_histos PRIVATE dump_histos.cpp)
TARGET_LINK_LIBRARIES(dump_histos HistDumper ${ROOT_LIBRARIES})